# treehacks

./: .gitmodules  README.md  model.ipynb  norm_stats.npz  pyproject.toml  realtime_preprocessor.py  shell.nix  test_realtime_preprocessor.py
dumps/: eeg_data.npz  nirs_data.npz
examples/: bci_inference_policy.py
models/: model.onnx  model.onnx.data  nirs_transformer(1).pt  robot.py
preprocessing/: README.md  dataset_3class_norm_sampled.npz  filter_features.py  pipeline.py
preprocessing/preprocess/: step_00_resample.py  step_01_clip.py  step_02_combine.py  step_03_flatten.py  step_04_filter_labels.py  step_05_mask.py  step_06_normalize.py
